--- a/ece531.org
+++ b/ece531.org
@@ -1,75 +1,8 @@
-* ECE-531 Introduction to IoT :TOC:
-  - [[#course-info][Course Info]]
-    - [[#syllabus][Syllabus]]
-    - [[#course-map][Course Map]]
-    - [[#schedule][Schedule]]
-  - [[#module-1][Module 1]]
-  - [[#module-2-software-analysis-and-tools][Module 2 Software Analysis and Tools]]
-    - [[#goals-install-all-necessary-dev-deploy--analysis-tool][GOALS: install all necessary dev, deploy, & analysis tool]]
-    - [[#install-ubuntu-2004-as-vm-in-vmware-workstation-pro-17-44][Install Ubuntu 20.04 as VM in VMWare Workstation Pro 17]]
-    - [[#configure-devbox-with-following-tools-11][Configure devbox with following tools.]]
-    - [[#configure-devbox-with-following-tools-22][Configure devbox with following tools.]]
-    - [[#configure-deployment-box-vm-inside-vm-33][Configure deployment box (vm inside vm)]]
-    - [[#download--analyze-hs110-44][Download & Analyze HS110]]
-    - [[#comments][COMMENTS:]]
-    - [[#code-blocks][CODE BLOCKS:]]
-    - [[#owasp-model-template][OWASP Model Template]]
-    - [[#assignment-nc220-firmware-analysis-use-owasp-model-00][Assignment: NC220 Firmware Analysis (use OWASP model)]]
-  - [[#module-3][Module 3]]
-    - [[#goals][GOALS:]]
-      - [[#a][A]]
-      - [[#b][B]]
-    - [[#videos--slides][Videos / Slides]]
-      - [[#project-development-and-attack-surfaces][Project, Development, and Attack Surfaces]]
-        - [[#project-i--iot_3_1_1mp4][Project (I) / IoT_3_1_1.mp4]]
-        - [[#project-ii--iot_3_1_2mp4][Project (II) / IoT_3_1_2.mp4]]
-        - [[#personal-development-process--iot_3_1_3mp4][Personal Development Process / IoT_3_1_3.mp4]]
-        - [[#attack-surfaces--iot_3_1_4mp4][Attack Surfaces / IoT_3_1_4.mp4]]
-        - [[#networking-support-and-buildroot--iot_3_2_1mp4][Networking Support and Buildroot / IoT_3_2_1.mp4]]
-          - [[#making-modifications-to-buildroot-image][Making modifications to buildroot image:]]
-          - [[#modify-buildroot-image-to-include-libraries-networking-libcur-curl][Modify buildroot image to include libraries-networking-libcur, curl]]
-          - [[#rebuild-image-and-test-see-above][Rebuild image and test (see above)]]
-        - [[#networking-configurations--iot_3_2_2mp4][Networking Configurations / IoT_3_2_2.mp4]]
-          - [[#protocols-slirp-vs-tap][Protocols, SLIRP vs TAP]]
-          - [[#run-simplehttpserver-on-host-22][Run SimpleHTTPServer on HOST]]
-        - [[#looking-over-libcurlso--iot_3_2_3mp4][Looking Over Libcurl.so / IoT_3_2_3.mp4]]
-          - [[#workflow---scan][WORKFLOW - SCAN]]
-          - [[#workflow---record][WORKFLOW - RECORD]]
-          - [[#ssl-versions][SSL Versions]]
-          - [[#encrypted-algorithms][encrypted algorithms]]
-          - [[#urls--websites][url's / websites]]
-        - [[#a-libcurl-example---setting-up--iot_3_2_4mp4][A Libcurl Example - Setting Up / Iot_3_2_4.mp4]]
-        - [[#a-libcur-example---code--iot_3_2_5mp4][A Libcur Example - Code / IoT_3_2_5.mp4]]
-      - [[#networking][Networking]]
-      - [[#linking--loading][Linking & Loading]]
-      - [[#misc--refs--urls][MISC / REFs / URLs]]
-        - [[#sample-projects][Sample Projects:]]
-    - [[#homework][Homework]]
-    - [[#footnotes][FOOTNOTES:]]
-      - [[#testing-code-changes][Testing Code Changes:]]
-        - [[#workflow][WORKFLOW]]
-      - [[#debugging-qemu-seg-fault-on-post-put-delet-get--ok][DEBUGGING: QEMU seg fault on POST, PUT, DELET (GET == OK)]]
-        - [[#trace-seg-fault-error-04][Trace Seg Fault Error]]
-        - [[#watch-remaining-lectures-for-mod-3][Watch remaining lectures for MOD 3]]
-        - [[#submit-assignment--code-02][Submit Assignment / Code]]
-  - [[#module-4][Module 4]]
-    - [[#daemon-processes--video-iot_4_1_1][Daemon Processes / video IoT_4_1_1]]
-      - [[#notes][Notes:]]
-    - [[#filesystems--video-iot_4_1_2][Filesystems / video Iot_4_1_2]]
-    - [[#kernels--booting--video-iot_4_1_3][Kernels & Booting / video IoT_4_1_3]]
-      - [[#starting-up-daemons][Starting up Daemons...]]
-    - [[#securing-application][Securing Application]]
-    - [[#example-startup-script--video-iot_4_1_5][Example Startup Script / video IoT_4_1_5]]
-      - [[#script-format][Script format...]]
-      - [[#test-empty-script-ie-sample_framed][Test empty script (i.e. sample_framed)]]
-      - [[#fill-out-after-having-tested][FIll out after having tested...]]
-        - [[#terminal-commands-to-move-to-qemu][terminal commands to move to qemu]]
-  - [[#module-5][Module 5]]
-  - [[#module-6][Module 6]]
-  - [[#module-7][Module 7]]
-  - [[#module-8][Module 8]]
-  - [[#misc-info--notes][Misc Info / Notes]]
+#+TITLE:ECE531 NOTES
+#+AUTHOR:Silas Curfman
+#+OPTIONS: toc:2 broken-links:mark
 
+* ECE-531 Introduction to IoT
 ** Course Info
 *** Syllabus
 *** Course Map
@@ -574,4 +507,4 @@ close(STDEER_FILENO);
 ** Module 8
 ** Misc Info / Notes
    
- 
+   
